--- a/style.css
+++ b/style.css
@@ -1,15 +1,38 @@
-body{background: rgb(24, 188, 156)}
+html,body{
+  background: rgb(177, 245, 231);
+  margin: 0;
+  font-family:courier,arial,helvetica;
+  height: 100%;
+}
 
-.header{background: rgb(44, 62, 80)}
-.header__logo{color: #fff; float:left; display: block; padding:30px; text-decoration: none; font-family:courier,arial,helvetica;}
-.header__tag{color: #fff; float:left; display: block; padding:30px; text-decoration: none; font-family:courier,arial,helvetica;}
-.header__text a:hover{background: rgb(31, 51, 71);}
+.header{
+  background: rgb(44, 62, 80);
+  margin-top: -20px;
+}
 
+.tag{
+  color: white; 
+  float:left; 
+  display: block; 
+  padding:30px; 
+  text-decoration: none; 
+}
 
+h1{
+  margin-bottom: -5px;
+  font-size: 40px;
+  color: rgb(44, 62, 80);
+}
 
+.text a:hover{background: rgb(31, 51, 71);}
 
-
-
+textarea{
+  border: 2px solid rgb(31, 51, 71);
+  border-radius: 3px;
+  width: 30%;
+  height: 70%;
+  font-size: 20px;
+}
 
 .clearfix:after {
     visibility: hidden;
